<resources>
    <string name="app_name">Basic Calculator</string>

    <string name="calc_btn_point">.</string>
    <string name="calc_btn_zero">0</string>
    <string name="calc_btn_one">1</string>
    <string name="calc_btn_two">2</string>
    <string name="calc_btn_three">3</string>
    <string name="calc_btn_four">4</string>
    <string name="calc_btn_five">5</string>
    <string name="calc_btn_six">6</string>
    <string name="calc_btn_seven">7</string>
    <string name="calc_btn_eight">8</string>
    <string name="calc_btn_nine">9</string>

    <string name="calc_btn_plus">+</string>
    <string name="calc_btn_res">-</string>
    <string name="calc_btn_divide">÷</string>
    <string name="calc_btn_times">x</string>
    <string name="calc_btn_resolve">=</string>
    <string name="calc_btn_clear">clear</string>
    <string name="calc_btn_delete"><![CDATA[<]]></string>
    <string name="message_exp_incorrect">The expression it\'s incorrect.</string>
    <string name="verificate_your_numbers">Verificate your numbers</string>

</resources>