<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingBottom="@dimen/common_padding_min">

    <TextView
        android:id="@+id/tvOperation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?colorOnSurface"
        android:background="?colorSurface"
        tools:text="5x2"
        android:padding="@dimen/common_padding_min"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="?colorOnSurface"
        android:background="?colorSurface"
        android:layout_marginBottom="@dimen/common_padding_min"
        tools:text="10.0"
        android:padding="@dimen/common_padding_min"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:gravity="center_vertical|end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOperation"
        app:layout_constraintBottom_toTopOf="@id/llTop"/>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="H, 4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingEnd="@dimen/common_padding_min">
        <Button
            android:id="@+id/btnPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_point"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_zero"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnResolve"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/calc_btn_resolve"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/blue_700"
            android:onClick="onClickButton"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPreBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="H, 4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llBottom"
        android:paddingEnd="@dimen/common_padding_min">
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_one"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_two"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_three"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_plus"
            android:textColor="@color/blue_700"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMiddle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="H, 4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llPreBottom"
        android:paddingEnd="@dimen/common_padding_min">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_four"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_five"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_six"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnRes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_res"
            android:textColor="@color/blue_700"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPreTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="H, 4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llMiddle"
        android:paddingEnd="@dimen/common_padding_min">
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_seven"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_eight"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_nine"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnTimes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_times"
            android:textColor="@color/blue_700"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:textAllCaps="false"
            android:onClick="onClickButton"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="H, 4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llPreTop"
        android:paddingEnd="@dimen/common_padding_min">
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/calc_btn_clear"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/deepOrange_900"
            android:onClick="onClickButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:textColor="@color/blue_700"
            android:layout_marginStart="@dimen/common_padding_min"
            android:contentDescription="@string/calc_btn_delete"
            android:backgroundTint="@color/gray_700"
            app:icon="@drawable/ic_back"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/common_padding_none"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_divide"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/gray_700"
            android:textColor="@color/blue_700"
            android:onClick="onClickButton"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
